fix: delete extra spaces

--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,8 @@
   box-sizing: border-box;
 }
 
-html, body {
+html,
+body {
   scroll-behavior: smooth;
   background-color: #ffffff;
 }
@@ -77,7 +78,7 @@ h2::after {
   cursor: pointer;
 }
 .button:hover {
-  background: #E47209;
+  background: #e47209;
   transition: all 0.3s ease-out;
 }
 .button_shadow {
@@ -262,7 +263,7 @@ h2::after {
   width: 345px;
   height: 800px;
   background-color: #ffa501;
-  transition: left 0.8s ease-out;
+  transition: left 1s ease-in-out;
 }
 @media (max-width: 1340px) {
   .about__navigation-block {
