--- a/sass/abstract/_constants.scss
+++ b/sass/abstract/_constants.scss
@@ -1,5 +1,5 @@
 $color-primery: #ffa501;
-$color-primery-hover: #E47209;
+$color-primery-hover: #e47209;
 $color-white: #ffffff;
 $color-black: #000000;
 $color-black-light: #151812;
